# pipebro

./: .gitignore  README.md  pyproject.toml  setup.py
pipebro/: __init__.py  debugging.py  utils.py
pipebro/Process/: AbstractProcess.py  Concurrent.py  Consumer.py  Process.py  Producer.py  SyncProcess.py
pipebro/ProcessImpl/: CSVParser.py  CSVSaver.py  DBSaver.py  Debug.py  JSONLinesParser.py  JSONLinesSaver.py  __init__.py
pipebro/Runners/: SerialRunner.py
pipebro/content/: flow.html
pipebro/elems/: AbstractData.py  PipeEndSignal.py  PipeEvent.py  PipeQueue.py  PipeWatchdog.py  __init__.py  data_types.py
